k8s-prod/middleware-admin.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-admin
  namespace: multiapp-prod
spec:
  stripPrefix:
    prefixes:
      - /admin
