k8s-prod/middleware-strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-admin-user
  namespace: multiapp-prod
spec:
  stripPrefix:
    prefixes:
      - /admin
      - /user
