k8s-prod/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-user
  namespace: multiapp-prod
spec:
  stripPrefix:
    prefixes:
      - /user
