k8s-prod/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminmvc
  namespace: multiapp-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminmvc
  template:
    metadata:
      labels:
        app: adminmvc
    spec:
      containers:
        - name: adminmvc
          image: rakeshdev12/adminmvc:latest   # ✅ FIX
          imagePullPolicy: Always               # ✅ FIX
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminmvc-service
  namespace: multiapp-prod
spec:
  selector:
    app: adminmvc
  ports:
    - port: 80
      targetPort: 8080
