k8s-prod/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermvc
  namespace: multiapp-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermvc
  template:
    metadata:
      labels:
        app: usermvc
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: usermvc
          image: rakeshdev12/usermvc:latest
          ports:
            - containerPort: 8080   # ✅ FIXED
---
apiVersion: v1
kind: Service
metadata:
  name: usermvc-service
  namespace: multiapp-prod
spec:
  selector:
    app: usermvc
  ports:
    - port: 80
      targetPort: 8080   # ✅ FIXED
